2002-10-24  Darin Adler  <darin@apple.com>

	- fixed a crash I ran into in the new delegate code

        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate _releaseResources]): Retain self across this
	deallocation to avoid reentering and being deallocated midstream. This happens
	because the handle holds the only reference to us, and we may be releasing the
	last reference to it.
        (-[WebBaseResourceHandleDelegate dealloc]): Add call to [super dealloc].

        * Plugins.subproj/WebBasePluginPackage.m: (-[WebBasePluginPackage dealloc]):
	Add call to [super dealloc].

        * WebView.subproj/WebMainResourceClient.m: Tweak.

2002-10-23  Darin Adler  <darin@apple.com>

	- fixed 3083013 -- REGRESSION: Cookie refused at http://directory/ even on reload

	Restore a bit of the cruft.

        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handle:willSendRequest:]):
	We need to change the request on the data source when a redirect happens,
	because the data source goes on to ultimately communicate this to WebCore.
	Restored the code that did that, with some changes to fit into the new regime.

2002-10-23  Richard Williamson  <rjw@apple.com>

        Cleaned up months of accumulated cruft.
        Added base class to the three WebResourceHandleDelegate implementors.
        Removed superfluous handle references to controller callbacks.
        More can still be done.
        All in the name of fixing 3076050.
        
        * Misc.subproj/WebKitErrors.h:
        * Plugins.subproj/WebBaseNetscapePluginStream.m:
        (-[WebBaseNetscapePluginStream setResponse:]):
        * Plugins.subproj/WebNetscapePluginRepresentation.m:
        (-[WebNetscapePluginRepresentation receivedData:withDataSource:]):
        (-[WebNetscapePluginRepresentation receivedError:withDataSource:]):
        (-[WebNetscapePluginRepresentation finishedLoadingWithDataSource:]):