@@ -1,3 +1,12 @@
+2002-10-24  Richard Williamson   <rjw@apple.com>
+
+        Flag error instead of ASSERTing as a result of fix to 3083013.
+        Not clear why this condition occurs, but better than ASSERTing
+        for Alex 29.
+        
+        * WebView.subproj/WebDataSourcePrivate.m:
+        (-[WebDataSource _setRequest:]):
+
 2002-10-24  Darin Adler  <darin@apple.com>
 
 	- fixed a crash I ran into in the new delegate code
